# prk_mdgen

./: Cargo.toml  Readme.md  llm_response.md  v1_turn3_o1.md
src/: execute.rs  extra.rs  extract.rs  file_gen.rs  lib.rs  main.rs  parser.rs  scanner.rs
tests/: integration_test.rs
