[package]
name = "prk_mdgen"
version = "0.1.5"
edition = "2024"
description = "Generate and execute Rust projects from annotated Markdown files"
license = "MIT"
categories = ["command-line-utilities", "development-tools", "parsing"]
keywords = ["rust", "markdown", "generator", "cli"]
repository = "https://github.com/prk-Jr/prk_mdgen"

[dependencies]
regex = "1.7"
rayon = "1.6"
lazy_static = "1.4"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0.98"
ignore = "0.4.23"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.19.1"
indoc = "2"
